2006-04-07  Nathaniel Smith  <njs@pobox.com>

	* figures/README: Add note on PNGs.
	* figures/{manifest,file-id-manifest-id,revision-chaining,revision}.png:
	Regenerate PNGs.
	
2006-04-07  Nathaniel Smith  <njs@pobox.com>

	* figures/oo-figures.sxd: Sigh, accidentally discarded the changes
	I had to make since the fonts changed and the arrows/boxes became
	incorrect.  This redoes them, to approximately match the version
	used to generate the current pdf files.

2006-04-07  Nathaniel Smith  <njs@pobox.com>

	* figures/README: More notes.
	* figures/oo-figures.sxd: No idea what changed about this file,
	don't care.
	* figures/{manifest,file-id-manifest-id,revision-chaining,revision}:
	Finally managed to get proper pdfs out of OpenOffice.  Committing
	now before I have a chance to screw things up.
	
2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* figures/README: New file.
	* figures/oo-figures.sxd: Write into the file the filename that
	each figure should be exported to.  I'll actually do the exports
	later...
	
2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (mostlyclean-local): Delete
	package_full_revision.txt, not package_full_revision_dist.txt.

2006-04-06  Nathaniel Smith  <njs@pobox.com>
	
	* monotone.texi: Fix up the ascii diagrams in the early sections
	to match current data formats.  Fix up sample output similarly.
	Fix even more places where we say "monotone" to refer to the
	command.
	* figures/oo-figures.sxd: Update graphical figures to match
	current data formats.
	
2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi: Fix a bunch more places where we say "monotone"
	to refer to the command name.

2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi: .mt-attrs?  Never heard of it...

2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* po/LINGUAS: Add de.

2006-04-06  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Go ahead and add a note about sqlite 3.3, since
	incompatibility with the 3.2 command line client has apparently